--- a/backend/Saboreie/receitas/templates/receitas/comentarios.html
+++ b/backend/Saboreie/receitas/templates/receitas/comentarios.html
@@ -5,8 +5,11 @@
 {% block content %}
 <!-- Configuração do Layout da Navbar -->
 <nav class="navbar navbar-expand-lg navbar-custom">
-    <div class="container">
-        <a class="navbar-brand" href="#">SABORIZE</a>
+    <div class="container d-flex align-items-center">
+        <a href="javascript:history.back()" class="me-3 text-decoration-none text-light">
+            <i class="bi bi-arrow-left fs-4"></i>
+        </a>
+        <a class="navbar-brand" href="{% url 'feed_receitas' %}">SABORIZE</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -51,7 +54,7 @@
                             <small class="text-muted">Máximo 500 caracteres. Restam: <span id="caracteres-restantes">500</span></small>
                         </div>
                         <div class="d-flex justify-content-center gap-2">
-                            <button type="submit" class="btn btn-custom">Enviar Comentário</button>
+                            <button type="submit" class="btn btn-custom" >Enviar Comentário</button>
                             <button type="button" class="btn btn-secondary" onclick="history.back()">Cancelar</button>
                         </div>
                     </form>
@@ -84,7 +87,7 @@
                 {% endfor %}
 
                 <div class="text-center mt-4">
-                    <a href="{% url 'ver_receita' receita.id %}" class="btn btn-secondary">Voltar para a receita</a>
+                    <a href="{% url 'ver_receita_feed' receita.id %}" class="btn btn-secondary">Voltar para a receita</a>
                 </div>
             </div>
         </div>
