--- a/backend/Saboreie/receitas/templates/receitas/criar_receita.html
+++ b/backend/Saboreie/receitas/templates/receitas/criar_receita.html
@@ -6,8 +6,11 @@
 
 <!-- Configuração do Layout da Navbar -->
 <nav class="navbar navbar-expand-lg navbar-custom">
-    <div class="container">
-        <a class="navbar-brand" href="#">SABORIZE</a>
+    <div class="container d-flex align-items-center">
+        <a href="javascript:history.back()" class="me-3 text-decoration-none text-light">
+            <i class="bi bi-arrow-left fs-4"></i>
+        </a>
+        <a class="navbar-brand" href="{% url 'feed_receitas' %}">SABORIZE</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
