--- a/backend/Saboreie/receitas/templates/receitas/receita_feed.html
+++ b/backend/Saboreie/receitas/templates/receitas/receita_feed.html
@@ -3,20 +3,46 @@
 {% block title %}{{ receita.titulo }} - Saborize{% endblock title %}
 
 {% block content %}
-<div class="container mt-4">
 
-    <!-- Configuração do Layout da Navbar -->
-    <div class="mb-3">
-        <a href="{% url 'feed_receitas' %}" class="btn btn-secondary btn-sm">&larr; Voltar ao Feed</a>
-        {% if user.is_authenticated %}
-            <span class="ms-3">Logado como <strong>{{ user.username }}</strong></span>
-            <a href="{% url 'listar_receitas' %}" class="btn btn-custom btn-sm ms-2">Minhas Receitas</a>
-            <a href="{% url 'logout' %}" class="btn btn-custom btn-sm ms-2">Logout</a>
-        {% else %}
-            <a href="{% url 'paginaLogin' %}" class="btn btn-custom btn-sm ms-2">Fazer Login</a>
-            <a href="{% url 'registrarUser' %}" class="btn btn-custom btn-sm ms-2">Registrar-se</a>
-        {% endif %}
+<!-- Configuração do Layout da Navbar -->
+<nav class="navbar navbar-expand-lg navbar-custom">
+    <div class="container d-flex align-items-center">
+        <a href="javascript:history.back()" class="me-3 text-decoration-none text-light">
+            <i class="bi bi-arrow-left fs-4"></i>
+        </a>
+        <a class="navbar-brand" href="{% url 'feed_receitas' %}">SABORIZE</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                {% if request.user.is_authenticated %}
+                    <li>
+                        <span class="nav-link">Logado como <strong>{{ user.username }}</strong></span>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'listar_receitas' %}">Minhas Receitas</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'paginaLogin' %}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'registrarUser' %}">Registrar</a>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
     </div>
+</nav>
+
+
+
+<div class="container mt-4">
 
     <!-- Informações da receita -->
     <div class="card card-custom mb-4">
