Implementa sistema de avaliações e seguir usuários
Funcionalidades implementadas:
- Sistema de avaliação de receitas com estrelas (1-5)
- Sistema para seguir/parar de seguir outros usuários
- Feed personalizado com receitas apenas de usuários seguidos
- Página para descobrir novos usuários
- Funcionalidade completa de editar e deletar receitas
- Exibição de avaliações nas páginas de receitas
- APIs REST para todas as operações
- Interface responsiva sem CSS personalizado

Modelos adicionados:
- Avaliacao: modelo para avaliar receitas
- Seguidor: modelo para relacionamento entre usuários

Templates criados:
- confirmar_deletar.html: confirmação antes de deletar receita
- feed_seguidos.html: feed apenas de usuários seguidos
- listar_usuarios.html: página para descobrir usuários

Templates modificados:
- Todos os templates de receitas foram atualizados com as novas funcionalidades
- Adicionados botões de avaliação, edição, exclusão e seguir usuários
- Melhorada a navegação entre as páginas

--- a/backend/Saboreie/receitas/templates/receitas/feed.html
+++ b/backend/Saboreie/receitas/templates/receitas/feed.html
@@ -17,6 +17,8 @@
                 {% if user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'listar_receitas' %}">Minhas Receitas</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'criar_receita' %}">Criar Receita</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'feed_seguidos' %}">Feed dos Seguidos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'listar_usuarios' %}">Descobrir Usuários</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'paginaLogin' %}">Login</a></li>
